@@ -3,6 +3,8 @@ Fri Nov 26 19:46:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 	* Headers/Foundation/NSString.h: Tidied and fixed return types for
 	for a few methods.
 	* Source/NSString.m: ditto.
+	* Headers/NSRange.h: Added NSRangeFromString()
+	* Source/NSRange.m: Implemented NSRangeFromString()
 
 Sun Nov 21  6:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
